--- a/res/battle/moves/meson.build
+++ b/res/battle/moves/meson.build
@@ -4,8 +4,11 @@ pl_waza_tbl_subdirs = [
     '0469',
     '0470',
     'absorb',
+    'accelerock',
     'acid',
     'acid_armor',
+    'acid_spray',
+    'acrobatics',
     'acupressure',
     'aerial_ace',
     'aeroblast',
@@ -17,6 +20,7 @@ pl_waza_tbl_subdirs = [
     'aqua_jet',
     'aqua_ring',
     'aqua_tail',
+    'armor_cannon',
     'arm_thrust',
     'aromatherapy',
     'assist',
@@ -45,6 +49,7 @@ pl_waza_tbl_subdirs = [
     'bone_rush',
     'bounce',
     'brave_bird',
+    'breaking_swipe',
     'brick_break',
     'brine',
     'bubble',
@@ -52,6 +57,7 @@ pl_waza_tbl_subdirs = [
     'bug_bite',
     'bug_buzz',
     'bulk_up',
+    'bulldoze',
     'bullet_punch',
     'bullet_seed',
     'calm_mind',
@@ -104,16 +110,21 @@ pl_waza_tbl_subdirs = [
     'dragon_breath',
     'dragon_claw',
     'dragon_dance',
+    'dragon_darts',
     'dragon_pulse',
     'dragon_rage',
     'dragon_rush',
     'drain_punch',
     'dream_eater',
     'drill_peck',
+    'drill_run',
+    'dual_chop',
+    'dual_wingbeat',
     'dynamic_punch',
     'earth_power',
     'earthquake',
     'egg_bomb',
+    'electroweb',
     'embargo',
     'ember',
     'encore',
@@ -133,17 +144,21 @@ pl_waza_tbl_subdirs = [
     'faint_attack',
     'fire_blast',
     'fire_fang',
+    'fire_lash',
     'fire_punch',
     'fire_spin',
+    'first_impression',
     'fissure',
     'flail',
     'flamethrower',
+    'flame_charge',
     'flame_wheel',
     'flare_blitz',
     'flash',
     'flash_cannon',
     'flatter',
     'fling',
+    'flip_turn',
     'fly',
     'focus_blast',
     'focus_energy',
@@ -185,11 +200,14 @@ pl_waza_tbl_subdirs = [
     'heart_swap',
     'heat_wave',
     'helping_hand',
+    'hex',
     'hidden_power',
+    'high_horsepower',
     'hi_jump_kick',
     'horn_attack',
     'horn_drill',
     'howl',
+    'hurricane',
     'hydro_cannon',
     'hydro_pump',
     'hyper_beam',
@@ -199,8 +217,10 @@ pl_waza_tbl_subdirs = [
     'ice_ball',
     'ice_beam',
     'ice_fang',
+    'ice_hammer',
     'ice_punch',
     'ice_shard',
+    'icicle_crash',
     'icicle_spear',
     'icy_wind',
     'imprison',
@@ -208,6 +228,7 @@ pl_waza_tbl_subdirs = [
     'iron_defense',
     'iron_head',
     'iron_tail',
+    'jaw_lock',
     'judgment',
     'jump_kick',
     'karate_chop',
@@ -222,9 +243,11 @@ pl_waza_tbl_subdirs = [
     'leer',
     'lick',
     'light_screen',
+    'liquidation',
     'lock_on',
     'lovely_kiss',
     'low_kick',
+    'low_sweep',
     'lucky_chant',
     'lunar_dance',
     'luster_purge',
@@ -265,6 +288,7 @@ pl_waza_tbl_subdirs = [
     'mud_shot',
     'mud_slap',
     'mud_sport',
+    'mystical_fire',
     'nasty_plot',
     'natural_gift',
     'nature_power',
@@ -296,11 +320,13 @@ pl_waza_tbl_subdirs = [
     'power_gem',
     'power_swap',
     'power_trick',
+    'power_up_punch',
     'power_whip',
     'present',
     'protect',
     'psybeam',
     'psychic',
+    'psychic_fangs',
     'psycho_boost',
     'psycho_cut',
     'psycho_shift',
@@ -309,10 +335,13 @@ pl_waza_tbl_subdirs = [
     'punishment',
     'pursuit',
     'quick_attack',
+    'quiver_dance',
     'rage',
+    'rage_powder',
     'rain_dance',
     'rapid_spin',
     'razor_leaf',
+    'razor_shell',
     'razor_wind',
     'recover',
     'recycle',
@@ -341,7 +370,9 @@ pl_waza_tbl_subdirs = [
     'sand_attack',
     'sandstorm',
     'sand_tomb',
+    'scald',
     'scary_face',
+    'scorching_sands',
     'scratch',
     'screech',
     'secret_power',
@@ -356,6 +387,7 @@ pl_waza_tbl_subdirs = [
     'shadow_sneak',
     'sharpen',
     'sheer_cold',
+    'shell_smash',
     'shock_wave',
     'signal_beam',
     'silver_wind',
@@ -372,6 +404,8 @@ pl_waza_tbl_subdirs = [
     'sleep_talk',
     'sludge',
     'sludge_bomb',
+    'sludge_wave',
+    'smart_strike',
     'smelling_salt',
     'smog',
     'smoke_screen',
@@ -379,6 +413,7 @@ pl_waza_tbl_subdirs = [
     'snore',
     'softboiled',
     'solar_beam',
+    'solar_blade',
     'sonic_boom',
     'spacial_rend',
     'spark',
@@ -389,6 +424,7 @@ pl_waza_tbl_subdirs = [
     'spit_up',
     'splash',
     'spore',
+    'spotlight',
     'stealth_rock',
     'steel_wing',
     'stockpile',
@@ -397,6 +433,7 @@ pl_waza_tbl_subdirs = [
     'strength',
     'string_shot',
     'struggle',
+    'struggle_bug',
     'stun_spore',
     'submission',
     'substitute',
@@ -416,6 +453,7 @@ pl_waza_tbl_subdirs = [
     'synthesis',
     'tackle',
     'tail_glow',
+    'tail_slap',
     'tail_whip',
     'tailwind',
     'take_down',
@@ -426,6 +464,7 @@ pl_waza_tbl_subdirs = [
     'thrash',
     'thunder',
     'thunderbolt',
+    'thunderclap',
     'thunder_fang',
     'thunder_punch',
     'thunder_shock',
@@ -434,10 +473,12 @@ pl_waza_tbl_subdirs = [
     'torment',
     'toxic',
     'toxic_spikes',
+    'trailblaze',
     'transform',
     'tri_attack',
     'trick',
     'trick_room',
+    'triple_axel',
     'triple_kick',
     'trump_card',
     'twineedle',
@@ -445,9 +486,11 @@ pl_waza_tbl_subdirs = [
     'uproar',
     'u_turn',
     'vacuum_wave',
+    'venoshock',
     'vice_grip',
     'vine_whip',
     'vital_throw',
+    'volt_switch',
     'volt_tackle',
     'wake_up_slap',
     'waterfall',
@@ -455,9 +498,11 @@ pl_waza_tbl_subdirs = [
     'water_pulse',
     'water_sport',
     'water_spout',
+    'wave_crash',
     'weather_ball',
     'whirlpool',
     'whirlwind',
+    'wild_charge',
     'will_o_wisp',
     'wing_attack',
     'wish',
