--- a/res/battle/scripts/effects/meson.build
+++ b/res/battle/scripts/effects/meson.build
@@ -278,5 +278,13 @@ effect_script_files = files(
     'effect_script_0276.s',
     'effect_script_0277.s',
     'effect_script_0278.s',
-    'effect_script_0279.s'
+    'effect_script_0279.s',
+    'effect_script_0280.s',
+    'effect_script_0281.s',
+    'effect_script_0282.s',
+    'effect_script_0283.s',
+    'effect_script_0284.s',
+    'effect_script_0285.s',
+    'effect_script_0286.s',
+    'effect_script_0287.s'
 )
