--- a/res/battle/scripts/subscripts/meson.build
+++ b/res/battle/scripts/subscripts/meson.build
@@ -319,4 +319,5 @@ subscript_files = files(
     'subscript_switching_items.s',
     'subscript_raise_atk_sp_atk_on_hit.s',
     'subscript_emergency_exit.s',
+    'subscript_handle_lightning_rod_raise_spatk.s',
 )
