--- a/res/battle/moves/meson.build
+++ b/res/battle/moves/meson.build
@@ -516,6 +516,26 @@ pl_waza_tbl_subdirs = [
     'jaw_lock',
     'sticky_web',
     'dire_claw',
+    'dragon_darts',
+    'belch',
+    'headlong_rush',
+    'tail_slap',
+    'life_dew',
+    'struggle_bug',
+    'freeze_dry',
+    'throat_chop',
+    'scale_shot',
+    'chilling_water',
+    'dragon_tail',
+    'body_press',
+    'meteor_beam',
+    'steel_beam',
+    'nuzzle',
+    'psychic_noise',
+    'horn_leech',
+    'parting_shot',
+    'aqua_cutter',
+    'chilly_reception',
 ]
 
 pl_waza_tbl_data_srcs = []
