switchin AI gigacook + chilly reception

--- a/res/battle/scripts/moves/meson.build
+++ b/res/battle/scripts/moves/meson.build
@@ -499,5 +499,40 @@ move_script_files = files(
     'move_script_0497.s',
     'move_script_0498.s',
     'move_script_0499.s',
-    'move_script_0500.s'
+    'move_script_0500.s',
+    'move_script_0501.s',
+    'move_script_0502.s',
+    'move_script_0503.s',
+    'move_script_0504.s',
+    'move_script_0505.s',
+    'move_script_0506.s',
+    'move_script_0507.s',
+    'move_script_0508.s',
+    'move_script_0509.s',
+    'move_script_0510.s',
+    'move_script_0511.s',
+    'move_script_0512.s',
+    'move_script_0513.s',
+    'move_script_0514.s',
+    'move_script_0515.s',
+    'move_script_0516.s',
+    'move_script_0517.s',
+    'move_script_0518.s',
+    'move_script_0519.s',
+    'move_script_0520.s',
+    'move_script_0521.s',
+    'move_script_0522.s',
+    'move_script_0523.s',
+    'move_script_0524.s',
+    'move_script_0525.s',
+    'move_script_0526.s',
+    'move_script_0527.s',
+    'move_script_0528.s',
+    'move_script_0529.s',
+    'move_script_0530.s',
+    'move_script_0531.s',
+    'move_script_0532.s',
+    'move_script_0533.s',
+    'move_script_0534.s',
+    'move_script_0535.s'
 )
