parting shot (without interractions)

--- a/res/battle/scripts/subscripts/meson.build
+++ b/res/battle/scripts/subscripts/meson.build
@@ -325,4 +325,5 @@ subscript_files = files(
     'subscript_chilly_reception.s',
     'subscript_throat_chop.s',
     'subscript_throat_chop_end.s',
+    'subscript_parting_shot.s',
 )
