--- a/res/battle/scripts/effects/meson.build
+++ b/res/battle/scripts/effects/meson.build
@@ -290,5 +290,6 @@ effect_script_files = files(
     'effect_script_0288.s',
     'effect_script_0289.s',
     'effect_script_0290.s',
-    'effect_script_0291.s'
+    'effect_script_0291.s',
+    'effect_script_0292.s'
 )
