type changing moves

--- a/res/battle/scripts/effects/meson.build
+++ b/res/battle/scripts/effects/meson.build
@@ -291,5 +291,9 @@ effect_script_files = files(
     'effect_script_0289.s',
     'effect_script_0290.s',
     'effect_script_0291.s',
-    'effect_script_0292.s'
+    'effect_script_0292.s',
+    'effect_script_0293.s',
+    'effect_script_0294.s',
+    'effect_script_0295.s',
+    'effect_script_0296.s'
 )
