stored power + AI calc fix + beast boost overflow fix

--- a/res/battle/scripts/effects/meson.build
+++ b/res/battle/scripts/effects/meson.build
@@ -295,5 +295,6 @@ effect_script_files = files(
     'effect_script_0293.s',
     'effect_script_0294.s',
     'effect_script_0295.s',
-    'effect_script_0296.s'
+    'effect_script_0296.s',
+    'effect_script_0297.s'
 )
