ingame testing 3 + trainer difficulty

--- a/res/trainers/hard/unknown_007.json
+++ b/res/trainers/hard/unknown_007.json
@@ -1,6 +1,6 @@
 {
     "name": "Angelica",
-    "class": "TRAINER_CLASS_PICNICKER",
+    "class": "TRAINER_CLASS_TRAINER_CHERYL",
     "items": [],
     "ai_flags": [
         "AI_FLAG_BASIC"
