--- a/res/trainers/meson.build
+++ b/res/trainers/meson.build
@@ -8,23 +8,34 @@
 #       AI behavior flags, and items on-hand.
 #     - trpoke - party information for individual trainers in-game
 
-trainer_data_dir = meson.current_source_dir() / 'hard'
+trainer_data_dirs = [
+    meson.current_source_dir() / 'hard',
+    meson.current_source_dir() / 'normal',
+]
 
-# 1. Build the list of trainer stems, which define the files to be scanned
-# by the batch processor below. While building this list, assert that each
-# stem must have a corresponding data file.
+trainer_env = environment()
 trainer_consts = fs.read(trainers_txt).splitlines()
 trainer_stems = []
 trainer_data_files = []
+
+foreach trainer_data_dir : trainer_data_dirs
+# 1. Build the list of trainer stems, which define the files to be scanned
+# by the batch processor below. While building this list, assert that each
+# stem must have a corresponding data file.
+
 foreach trainer : trainer_consts
     # `substring` here strips the `TRAINER_` prefix
     trainer_stem = trainer.substring(8).to_lower()
-    trainer_stems += trainer_stem
-    trainer_data_files += files(trainer_data_dir / (trainer_stem + '.json'))
+
+    if not (trainer_stem == 'none' and trainer_data_dir.endswith('normal'))
+        trainer_stems += trainer_stem
+        trainer_data_files += files(trainer_data_dir / (trainer_stem + '.json'))
+    endif
 endforeach
 
 # 2. Build the environment of trainer stems to be passed to the batch processor.
-trainer_env = environment()
+endforeach
+
 trainer_env.append('TRAINERS', trainer_stems, separator: ';')
 
 # 3. Process the trainer data files in batch and emit header data + party lists.
@@ -36,7 +47,7 @@ datagen_trainer_out = custom_target('datagen_trainer_out',
     command: [
         datagen_trainer_exe,
         meson.current_build_dir(),
-        trainer_data_dir,
+        meson.current_source_dir(),
     ],
     env: trainer_env,
     depend_files: [
