--- a/src/meson.build
+++ b/src/meson.build
@@ -353,6 +353,7 @@ pokeplatinum_c = files(
     'unk_0209C390.c',
     'unk_020EDBAC.c',
     'unk_020F6824.c',
+    'debug.c',
     'overlay000/ov0_dummy.c',
     'overlay001/ov1_021D0D80.c',
     'overlay002/ov2_dummy.c',
