Final hg-engine imports

--- a/res/battle/moves/meson.build
+++ b/res/battle/moves/meson.build
@@ -4,8 +4,11 @@ pl_waza_tbl_subdirs = [
     '0469',
     '0470',
     'absorb',
+    'accelerock',
     'acid',
     'acid_armor',
+    'acid_spray',
+    'acrobatics',
     'acupressure',
     'aerial_ace',
     'aeroblast',
@@ -15,10 +18,12 @@ pl_waza_tbl_subdirs = [
     'air_slash',
     'amnesia',
     'ancient_power',
+    'aqua_cutter',
     'aqua_jet',
     'aqua_ring',
     'aqua_tail',
     'arm_thrust',
+    'armor_cannon',
     'aromatherapy',
     'assist',
     'assurance',
@@ -32,6 +37,7 @@ pl_waza_tbl_subdirs = [
     'barrier',
     'baton_pass',
     'beat_up',
+    'belch',
     'belly_drum',
     'bide',
     'bind',
@@ -40,13 +46,15 @@ pl_waza_tbl_subdirs = [
     'blaze_kick',
     'blizzard',
     'block',
+    'body_press',
     'body_slam',
     'bone_club',
-    'bonemerang',
     'bone_rush',
+    'bonemerang',
     'boomburst',
     'bounce',
     'brave_bird',
+    'breaking_swipe',
     'brick_break',
     'brine',
     'bubble',
@@ -54,6 +62,7 @@ pl_waza_tbl_subdirs = [
     'bug_bite',
     'bug_buzz',
     'bulk_up',
+    'bulldoze',
     'bullet_punch',
     'bullet_seed',
     'calm_mind',
@@ -63,7 +72,10 @@ pl_waza_tbl_subdirs = [
     'charge_beam',
     'charm',
     'chatter',
+    'chilling_water',
+    'chilly_reception',
     'clamp',
+    'clear_smog',
     'close_combat',
     'comet_punch',
     'confuse_ray',
@@ -106,18 +118,24 @@ pl_waza_tbl_subdirs = [
     'dragon_breath',
     'dragon_claw',
     'dragon_dance',
+    'dragon_darts',
     'dragon_pulse',
     'dragon_rage',
     'dragon_rush',
+    'dragon_tail',
     'drain_punch',
     'dream_eater',
     'drill_peck',
+    'drill_run',
+    'dual_chop',
+    'dual_wingbeat',
     'dynamic_punch',
     'earth_power',
     'earthquake',
     'egg_bomb',
     'electro_ball',
     'electro_shot',
+    'electroweb',
     'embargo',
     'ember',
     'encore',
@@ -130,25 +148,29 @@ pl_waza_tbl_subdirs = [
     'extrasensory',
     'extreme_speed',
     'facade',
+    'faint_attack',
     'fake_out',
     'fake_tears',
     'false_swipe',
     'feather_dance',
     'feint',
-    'faint_attack',
     'fire_blast',
     'fire_fang',
+    'fire_lash',
     'fire_punch',
     'fire_spin',
+    'first_impression',
     'fissure',
     'flail',
-    'flamethrower',
+    'flame_charge',
     'flame_wheel',
+    'flamethrower',
     'flare_blitz',
     'flash',
     'flash_cannon',
     'flatter',
     'fling',
+    'flip_turn',
     'fly',
     'focus_blast',
     'focus_energy',
@@ -156,7 +178,11 @@ pl_waza_tbl_subdirs = [
     'follow_me',
     'force_palm',
     'foresight',
+    'forests_curse',
+    'foul_play',
+    'freeze_dry',
     'frenzy_plant',
+    'frost_breath',
     'frustration',
     'fury_attack',
     'fury_cutter',
@@ -181,22 +207,26 @@ pl_waza_tbl_subdirs = [
     'hammer_arm',
     'harden',
     'haze',
-    'headbutt',
     'head_smash',
+    'headbutt',
+    'headlong_rush',
     'heal_bell',
     'heal_block',
-    'healing_wish',
     'heal_order',
     'heal_pulse',
+    'healing_wish',
     'heart_swap',
     'heat_wave',
     'heavy_slam',
     'helping_hand',
-    'hidden_power',
+    'hex',
     'hi_jump_kick',
+    'hidden_power',
+    'high_horsepower',
     'horn_attack',
     'horn_drill',
     'howl',
+    'hurricane',
     'hydro_cannon',
     'hydro_pump',
     'hyper_beam',
@@ -206,8 +236,10 @@ pl_waza_tbl_subdirs = [
     'ice_ball',
     'ice_beam',
     'ice_fang',
+    'ice_hammer',
     'ice_punch',
     'ice_shard',
+    'icicle_crash',
     'icicle_spear',
     'icy_wind',
     'imprison',
@@ -217,6 +249,7 @@ pl_waza_tbl_subdirs = [
     'iron_defense',
     'iron_head',
     'iron_tail',
+    'jaw_lock',
     'judgment',
     'jump_kick',
     'karate_chop',
@@ -230,31 +263,37 @@ pl_waza_tbl_subdirs = [
     'leech_seed',
     'leer',
     'lick',
+    'life_dew',
     'light_screen',
+    'liquidation',
     'lock_on',
     'lovely_kiss',
     'low_kick',
+    'low_sweep',
     'lucky_chant',
     'lunar_dance',
     'luster_purge',
     'mach_punch',
-    'magical_leaf',
     'magic_coat',
+    'magic_powder',
+    'magical_leaf',
     'magma_storm',
     'magnet_bomb',
     'magnet_rise',
     'magnitude',
+    'mat_block',
+    'me_first',
     'mean_look',
     'meditate',
-    'me_first',
     'mega_drain',
-    'megahorn',
     'mega_kick',
     'mega_punch',
+    'megahorn',
     'memento',
     'metal_burst',
     'metal_claw',
     'metal_sound',
+    'meteor_beam',
     'meteor_mash',
     'metronome',
     'milk_drink',
@@ -270,25 +309,29 @@ pl_waza_tbl_subdirs = [
     'moonlight',
     'morning_sun',
     'mud_bomb',
-    'muddy_water',
     'mud_shot',
     'mud_slap',
     'mud_sport',
+    'muddy_water',
+    'mystical_fire',
     'nasty_plot',
     'natural_gift',
     'nature_power',
     'needle_arm',
-    'nightmare',
     'night_shade',
     'night_slash',
+    'nightmare',
+    'nuzzle',
     'octazooka',
     'odor_sleuth',
     'ominous_wind',
     'outrage',
     'overheat',
     'pain_split',
-    'payback',
+    'parabolic_charge',
+    'parting_shot',
     'pay_day',
+    'payback',
     'peck',
     'perish_song',
     'petal_dance',
@@ -305,24 +348,31 @@ pl_waza_tbl_subdirs = [
     'power_gem',
     'power_swap',
     'power_trick',
+    'power_up_punch',
     'power_whip',
     'present',
     'protect',
     'psybeam',
+    'psych_up',
     'psychic',
+    'psychic_fangs',
+    'psychic_noise',
     'psycho_boost',
     'psycho_cut',
     'psycho_shift',
-    'psych_up',
+    'psyshock',
     'psywave',
     'punishment',
     'pursuit',
     'quick_attack',
     'quick_guard',
+    'quiver_dance',
     'rage',
+    'rage_powder',
     'rain_dance',
     'rapid_spin',
     'razor_leaf',
+    'razor_shell',
     'razor_wind',
     'recover',
     'recycle',
@@ -349,9 +399,12 @@ pl_waza_tbl_subdirs = [
     'sacred_fire',
     'safeguard',
     'sand_attack',
-    'sandstorm',
     'sand_tomb',
+    'sandstorm',
+    'scald',
+    'scale_shot',
     'scary_face',
+    'scorching_sands',
     'scratch',
     'screech',
     'secret_power',
@@ -366,6 +419,7 @@ pl_waza_tbl_subdirs = [
     'shadow_sneak',
     'sharpen',
     'sheer_cold',
+    'shell_smash',
     'shock_wave',
     'signal_beam',
     'silk_trap',
@@ -383,6 +437,7 @@ pl_waza_tbl_subdirs = [
     'sleep_talk',
     'sludge',
     'sludge_bomb',
+    'sludge_wave',
     'smelling_salt',
     'smog',
     'smoke_screen',
@@ -390,6 +445,7 @@ pl_waza_tbl_subdirs = [
     'snore',
     'softboiled',
     'solar_beam',
+    'solar_blade',
     'sonic_boom',
     'spacial_rend',
     'spark',
@@ -398,18 +454,23 @@ pl_waza_tbl_subdirs = [
     'spike_cannon',
     'spikes',
     'spiky_shield',
-    'spite',
     'spit_up',
+    'spite',
     'splash',
     'spore',
+    'spotlight',
     'stealth_rock',
+    'steel_beam',
     'steel_wing',
+    'sticky_web',
     'stockpile',
     'stomp',
     'stone_edge',
+    'stored_power',
     'strength',
     'string_shot',
     'struggle',
+    'struggle_bug',
     'stun_spore',
     'submission',
     'substitute',
@@ -419,6 +480,7 @@ pl_waza_tbl_subdirs = [
     'superpower',
     'supersonic',
     'surf',
+    'surging_strikes',
     'swagger',
     'swallow',
     'sweet_kiss',
@@ -429,6 +491,7 @@ pl_waza_tbl_subdirs = [
     'synthesis',
     'tackle',
     'tail_glow',
+    'tail_slap',
     'tail_whip',
     'tailwind',
     'take_down',
@@ -437,41 +500,51 @@ pl_waza_tbl_subdirs = [
     'teleport',
     'thief',
     'thrash',
+    'throat_chop',
     'thunder',
-    'thunderbolt',
     'thunder_fang',
     'thunder_punch',
     'thunder_shock',
     'thunder_wave',
+    'thunderbolt',
+    'thunderclap',
     'tickle',
     'torment',
     'toxic',
     'toxic_spikes',
+    'trailblaze',
     'transform',
     'tri_attack',
     'trick',
+    'trick_or_treat',
     'trick_room',
+    'triple_axel',
     'triple_kick',
     'trump_card',
     'twineedle',
     'twister',
-    'uproar',
     'u_turn',
+    'uproar',
     'vacuum_wave',
+    'venoshock',
     'vice_grip',
     'vine_whip',
     'vital_throw',
+    'volt_switch',
     'volt_tackle',
     'wake_up_slap',
-    'waterfall',
     'water_gun',
     'water_pulse',
     'water_sport',
     'water_spout',
+    'waterfall',
+    'wave_crash',
     'weather_ball',
     'whirlpool',
     'whirlwind',
+    'wicked_blow',
     'wide_guard',
+    'wild_charge',
     'will_o_wisp',
     'wing_attack',
     'wish',
