--- a/res/battle/scripts/effects/meson.build
+++ b/res/battle/scripts/effects/meson.build
@@ -296,5 +296,15 @@ effect_script_files = files(
     'effect_script_0294.s',
     'effect_script_0295.s',
     'effect_script_0296.s',
-    'effect_script_0297.s'
+    'effect_script_0297.s',
+    'effect_script_0298.s',
+    'effect_script_0299.s',
+    'effect_script_0300.s',
+    'effect_script_0301.s',
+    'effect_script_0302.s',
+    'effect_script_0303.s',
+    'effect_script_0304.s',
+    'effect_script_0305.s',
+    'effect_script_0306.s',
+    'effect_script_0307.s'
 )
